--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
         transform: rotate(360deg);
     }
 }
+
+.container {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+}
