--- a/src/Components/mainLaunch.css
+++ b/src/Components/mainLaunch.css
@@ -1,7 +1,8 @@
 .bMainLaunch {
     width: 100%;
-    height: 40vh;
-    background: url('https://images.unsplash.com/photo-1457364983758-510f8afa9f5f') no-repeat center center;
+    height: 30vw;
+    background: linear-gradient(#26262600, #262626FF), url('https://images.unsplash.com/photo-1457364983758-510f8afa9f5f') no-repeat center center;
+    background-blend-mode: saturation;
     background-size: cover;
     display: flex;
     flex-direction: column;
@@ -11,7 +12,7 @@
 
 .bDate {
     display: flex;
-    font-size: 5em;
+    font-size: 8vw;
     align-items: center;
     justify-content: space-around;
     flex: 1 1 auto;
@@ -38,7 +39,7 @@
     display: inherit;
     align-items: flex-start;
     justify-content: center;
-    font-size: 4vw;
+    font-size: 4vh;
 }
 
 .bRightPanel {
@@ -46,7 +47,7 @@
     flex-direction: column;
     align-items: flex-end;
     justify-content: center;
-    font-size: 2vw;
+    font-size: 2vh;
 }
 
 #idTitle,
